--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,37 @@
+aiosmtpd==1.4.6
+anyio==4.9.0
 asgiref==3.8.1
+atpublic==6.0.1
+attrs==25.3.0
 cart==1.2.3
 certifi==2025.4.26
 charset-normalizer==3.4.2
+config==0.5.1
 dj-database-url==2.3.0
 Django==5.1.6
 gunicorn==23.0.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+mega.py==1.0.8
+mysqlclient==2.2.7
 packaging==25.0
+pathlib==1.0.1
 pillow==11.1.0
 psycopg2-binary==2.9.10
 pycryptodome==3.22.0
+pyenchant==3.2.2
+python-decouple==3.8
+python-telegram-bot==22.1
 requests==2.32.3
+six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
+tenacity==9.1.2
+translit==0.2a1
+transliterate==1.10.2
 typing_extensions==4.13.2
 tzdata==2025.1
 urllib3==2.4.0
 whitenoise==6.9.0
-python-decouple==3.8
