--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DATABASE_URL=postgresql://obnimikids_user:G4dE5DZV6i2x3DSHEoKdn8jQZx3GHh1S@dpg-d0tmti3e5dus7382hq70-a.oregon-postgres.render.com/obnimikids_db
 IMGBB_API_KEY=331dd58e5656fdf4c236ec4d024c66bf
-TELEGRAM_BOT_TOKEN=8003810268:AAGP5lsPyGlJG8kj-dYriwvqh-3a8y9Fi0o
-ADMIN_TELEGRAM_ID=509241742
+TELEGRAM_BOT_TOKEN='7937948271:AAE_t6mDANHqnNkxdNG1estLMpI6Nd4lgL0'
+TELEGRAM_ADMIN_CHAT_IDS=509241742
+
